book: add pages
- add intro
- add architecture
- add references

--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,7 @@ authors = ["RaySlash"]
 language = "en"
 multilingual = false
 src = "src"
-title = "NixCats: A Comprehensive Guide"
+title = "NixCats Book"
+
+[rust]
+edition = "2021"
