--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -31,9 +31,9 @@ jobs:
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
+      #- name: Setup Pages
+      #  id: pages
+      #  uses: actions/configure-pages@v5
       - name: Test with mdBook
         run: mdbook test
       #- name: Upload artifact
