book: add highlightjs nix

--- a/book.toml
+++ b/book.toml
@@ -5,5 +5,11 @@ multilingual = false
 src = "src"
 title = "NixCats Book"
 
+[output.html]
+additional-js = ["custom-highlight.js"]
+cname = "nixcat-book"
+git-repository-url = "https://github.com/rayslash/nixcats-book"
+edit-url-template = "https://github.com/rayslash/nixcats-book/edit/main/doc/{path}"
+
 [rust]
 edition = "2021"
